fixed scrollbar styles

--- a/spotifyStyle.css
+++ b/spotifyStyle.css
@@ -42,7 +42,10 @@ body {
     min-height: 100%;
 }
 
-
+a {
+    text-decoration: none;
+    color:white;
+}
 
 .container {
     display:flex;
@@ -50,6 +53,25 @@ body {
     top:15px;
     position:absolute;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+/* Track */
+::-webkit-scrollbar-track {
+    display: none;
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--clr-accent-light);
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--clr-accent);
+  }
+
+
 
 /* Left Nav */
 
@@ -108,7 +130,6 @@ body {
 
 .nav__function-link-flex {
     display: flex;
-    flex-direction:row;
     align-items: center;
     margin-bottom: 10px;
 }
@@ -141,11 +162,6 @@ body {
     margin-bottom: 10px;
 }
 
-.fa-solid {
-    font-size: 15px;
-    color: var(--clr-accent-light);
-    padding-right: 10px;
-}
 
 .nav__function-text {
     font-size:var(--fs-body);
@@ -182,6 +198,8 @@ span{
 .playlist__list li:last-child {
     margin-bottom: 0;
 }
+
+
 
 /* Header */
 
@@ -354,7 +372,7 @@ span{
     display: flex;
     align-items: center;
     justify-content: start;
-    background-color:#222121;
+    background-color:rgba(67, 67, 67, 0.6);
     border-radius: 3px;
 }
 
@@ -362,6 +380,7 @@ span{
     height:50px;
     border-radius: 3px;
     margin-right:15px;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
 }
 
 .main__top-text {
@@ -394,6 +413,7 @@ span{
     height:95px;
     margin: 12px 12px;
     border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .main_object-text {
@@ -414,4 +434,12 @@ span{
     margin-top: 50px;
     margin-bottom: 100px;
     border-top: 0.1px solid rgb(56, 53, 53);
+}
+
+.main__object-title {
+    margin-bottom: 20px;
+}
+
+.main__object-title:hover {
+    text-decoration:underline;
 }
